src/snapshots/zeek_language_server__lsp__test__signature_help.snap
---
source: src/lsp.rs
expression: server.signature_help(params).await
---
Ok(
    Some(
        SignatureHelp {
            signatures: [
                SignatureInformation {
                    label: "f(x: count, y: string)",
                    documentation: None,
                    parameters: Some(
                        [
                            ParameterInformation {
                                label: Simple(
                                    "x",
                                ),
                                documentation: None,
                            },
                            ParameterInformation {
                                label: Simple(
                                    "y",
                                ),
                                documentation: None,
                            },
                        ],
                    ),
                    active_parameter: Some(
                        0,
                    ),
                },
            ],
            active_signature: None,
            active_parameter: None,
        },
    ),
)
