src/snapshots/zeek_language_server__lsp__test__signature_help_multiline.snap
---
source: src/lsp.rs
assertion_line: 2937
expression: "server.signature_help(super::SignatureHelpParams\n{\n    context: None, text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri),\n    Position::new(4, 4),), work_done_progress_params:\n    WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        SignatureHelp {
            signatures: [
                SignatureInformation {
                    label: "f(x: count, y: string)",
                    documentation: None,
                    parameters: Some(
                        [
                            ParameterInformation {
                                label: Simple(
                                    "x",
                                ),
                                documentation: None,
                            },
                            ParameterInformation {
                                label: Simple(
                                    "y",
                                ),
                                documentation: None,
                            },
                        ],
                    ),
                    active_parameter: Some(
                        1,
                    ),
                },
            ],
            active_signature: None,
            active_parameter: None,
        },
    ),
)
