src/snapshots/zeek_language_server__lsp__test__symbol-2.snap
---
source: src/lsp.rs
expression: "query(\"mod\").await"
---
Ok(
    Some(
        Flat(
            [
                SymbolInformation {
                    name: "mod_b::B",
                    kind: Variable,
                    tags: None,
                    deprecated: None,
                    location: Location {
                        uri: Uri(
                            Uri {
                                scheme: "file",
                                authority: Some(
                                    Authority {
                                        userinfo: None,
                                        host: "",
                                        host_parsed: RegName(
                                            "",
                                        ),
                                        port: None,
                                    },
                                ),
                                path: "/p2/b.zeek",
                                query: None,
                                fragment: None,
                            },
                        ),
                        range: Range {
                            start: Position {
                                line: 0,
                                character: 14,
                            },
                            end: Position {
                                line: 0,
                                character: 27,
                            },
                        },
                    },
                    container_name: Some(
                        "mod_b",
                    ),
                },
                SymbolInformation {
                    name: "mod_a::A",
                    kind: Variable,
                    tags: None,
                    deprecated: None,
                    location: Location {
                        uri: Uri(
                            Uri {
                                scheme: "file",
                                authority: Some(
                                    Authority {
                                        userinfo: None,
                                        host: "",
                                        host_parsed: RegName(
                                            "",
                                        ),
                                        port: None,
                                    },
                                ),
                                path: "/p1/a.zeek",
                                query: None,
                                fragment: None,
                            },
                        ),
                        range: Range {
                            start: Position {
                                line: 0,
                                character: 14,
                            },
                            end: Position {
                                line: 0,
                                character: 27,
                            },
                        },
                    },
                    container_name: Some(
                        "mod_a",
                    ),
                },
                SymbolInformation {
                    name: "mod_x::X",
                    kind: Variable,
                    tags: None,
                    deprecated: None,
                    location: Location {
                        uri: Uri(
                            Uri {
                                scheme: "file",
                                authority: Some(
                                    Authority {
                                        userinfo: None,
                                        host: "",
                                        host_parsed: RegName(
                                            "",
                                        ),
                                        port: None,
                                    },
                                ),
                                path: "/x/x.zeek",
                                query: None,
                                fragment: None,
                            },
                        ),
                        range: Range {
                            start: Position {
                                line: 0,
                                character: 14,
                            },
                            end: Position {
                                line: 0,
                                character: 27,
                            },
                        },
                    },
                    container_name: Some(
                        "mod_x",
                    ),
                },
            ],
        ),
    ),
)
