src/snapshots/zeek_language_server__lsp__test__symbol-3.snap
---
source: src/lsp.rs
assertion_line: 833
expression: "query(\"A\").await"

---
Ok(
    Some(
        [],
    ),
)
