src/snapshots/zeek_language_server__lsp__test__symbol-4.snap
---
source: src/lsp.rs
expression: "query(\"X\").await"
---
Ok(
    Some(
        Left(
            [],
        ),
    ),
)
