src/snapshots/zeek_language_server__lsp__test__symbol-5.snap
---
source: src/lsp.rs
expression: "query(\"F\").await"
---
Ok(
    Some(
        Flat(
            [],
        ),
    ),
)
