src/snapshots/zeek_language_server__lsp__test__symbol.snap
---
source: src/lsp.rs
assertion_line: 831
expression: "query(\"\").await"

---
Ok(
    Some(
        [],
    ),
)
